--- a/game_logic/game_logic.vcxproj.filters
+++ b/game_logic/game_logic.vcxproj.filters
@@ -15,14 +15,29 @@
     <Filter Include="export\include">
       <UniqueIdentifier>{a5fef152-d350-4413-8219-9bffdc97fdfb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="export\include\reversi">
+      <UniqueIdentifier>{ab3ac536-a5fb-429c-9177-7aa7b420e633}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\stdafx.hpp">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="export\include\reversi\game.hpp">
+      <Filter>export\include\reversi</Filter>
+    </ClInclude>
+    <ClInclude Include="export\include\reversi\score.hpp">
+      <Filter>export\include\reversi</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\stdafx.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\score.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
