--- a/game_logic_test/game_logic_test.vcxproj.filters
+++ b/game_logic_test/game_logic_test.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClCompile Include="src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\game_test_suite.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\stdafx.hpp">
