--- a/game_logic_integration_tests/game_logic_integration_tests.vcxproj
+++ b/game_logic_integration_tests/game_logic_integration_tests.vcxproj
@@ -19,7 +19,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="export\include\reversi\testing\game_logger_spy.hpp" />
     <ClInclude Include="include\stdafx.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -34,10 +33,10 @@
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{416C62A5-5538-466F-9DC0-B19C51DD7D57}</ProjectGuid>
+    <ProjectGuid>{327185CD-694C-4539-8B42-27730221889E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>reversi</RootNamespace>
-    <ProjectName>game_logic_test</ProjectName>
+    <ProjectName>game_logic_integration_tests</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -82,6 +81,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>c:\libraries\boost\boost-1.56.0.1\lib64</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>$(TargetPath)</Command>
@@ -104,6 +104,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>c:\libraries\boost\boost-1.56.0.1\lib64</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>$(TargetPath)</Command>
