--- a/game_logic_unit_tests/game_logic_unit_tests.vcxproj.filters
+++ b/game_logic_unit_tests/game_logic_unit_tests.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="src\game_test_suite.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\stream_game_logger_test_suite.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\stdafx.hpp">
