--- a/foundational/foundational.vcxproj.filters
+++ b/foundational/foundational.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="export\include\util\sequence.hpp">
       <Filter>export\include\util</Filter>
     </ClInclude>
+    <ClInclude Include="export\include\util\signal_traits.hpp">
+      <Filter>export\include\util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\stdafx.cpp">
