--- a/game_server/game_server.vcxproj.filters
+++ b/game_server/game_server.vcxproj.filters
@@ -9,18 +9,36 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
+    <Filter Include="include\reversi">
+      <UniqueIdentifier>{70453c10-4036-4c47-a2ed-2ca9ab3bda19}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="include\reversi\remoting">
+      <UniqueIdentifier>{388af989-7ac7-421e-b080-2a00917b95ec}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\reversi.cpp">
+    <ClCompile Include="src\stdafx.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\stdafx.cpp">
+    <ClCompile Include="src\main.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game_server.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\client_connection.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\stdafx.hpp">
       <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\reversi\remoting\client_connection.hpp">
+      <Filter>include\reversi\remoting</Filter>
+    </ClInclude>
+    <ClInclude Include="include\reversi\remoting\game_server.hpp">
+      <Filter>include\reversi\remoting</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
