--- a/game_server_logic_unit_tests/game_server_logic_unit_tests.vcxproj.filters
+++ b/game_server_logic_unit_tests/game_server_logic_unit_tests.vcxproj.filters
@@ -9,6 +9,15 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
+    <Filter Include="include\reversi">
+      <UniqueIdentifier>{534cdc11-ab14-4c26-a737-70140de62bed}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="include\reversi\remoting">
+      <UniqueIdentifier>{6540421c-e80f-4575-ac6c-e4ba156ee9af}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="include\reversi\remoting\testing">
+      <UniqueIdentifier>{c5989679-c9d6-4217-a475-7fe461f01a01}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\stdafx.cpp">
@@ -17,10 +26,19 @@
     <ClCompile Include="src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\multiplayer_match_test_suite.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\multiplayer_match_registry_test_suite.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\stdafx.hpp">
       <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\reversi\remoting\testing\game_logger_spy_factory.hpp">
+      <Filter>include\reversi\remoting\testing</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
