--- a/game_server_logic/game_server_logic.vcxproj.filters
+++ b/game_server_logic/game_server_logic.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="export\include\reversi\remoting\file_game_logger_factory.hpp">
       <Filter>export\include\reversi\remoting</Filter>
     </ClInclude>
+    <ClInclude Include="export\include\reversi\remoting\multiplayer_match_messenger.hpp">
+      <Filter>export\include\reversi\remoting</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\stdafx.cpp">
@@ -50,6 +53,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\file_game_logger_factory.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\multiplayer_match_messenger.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
