--- a/game_server_logic_unit_tests/game_server_logic_unit_tests.vcxproj
+++ b/game_server_logic_unit_tests/game_server_logic_unit_tests.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\multiplayer_match_messenger_test_suite.cpp" />
     <ClCompile Include="src\multiplayer_match_registry_test_suite.cpp" />
     <ClCompile Include="src\multiplayer_match_test_suite.cpp" />
     <ClCompile Include="src\stdafx.cpp">
