--- a/game_server_logic_unit_tests/game_server_logic_unit_tests.vcxproj
+++ b/game_server_logic_unit_tests/game_server_logic_unit_tests.vcxproj
@@ -79,7 +79,8 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile>stdafx.hpp</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>include;export\include;..\foundational\export\include;..\game_logic\export\include;..\game_server_logic\export\include;..\testing\export\include;..\game_logic_unit_tests\export\include;..\gmock_1.7.0\include;..\gmock_1.7.0\gtest\include;c:\libraries\boost\boost-1.56.0.1</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;export\include;..\foundational\export\include;..\game_logic\export\include;..\game_server_logic\export\include;..\testing\export\include;..\game_logic_unit_tests\export\include;..\gmock_1.7.0\include;..\gmock_1.7.0\gtest\include;c:\program files\cinder_0.8.6_vc2013\boost</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -99,7 +100,8 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile>stdafx.hpp</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>include;export\include;..\foundational\export\include;..\game_logic\export\include;..\game_server_logic\export\include;..\testing\export\include;..\game_logic_unit_tests\export\include;..\gmock_1.7.0\include;..\gmock_1.7.0\gtest\include;c:\libraries\boost\boost-1.56.0.1</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;export\include;..\foundational\export\include;..\game_logic\export\include;..\game_server_logic\export\include;..\testing\export\include;..\game_logic_unit_tests\export\include;..\gmock_1.7.0\include;..\gmock_1.7.0\gtest\include;c:\program files\cinder_0.8.6_vc2013\boost</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
