--- a/reversi/reversi.vcxproj
+++ b/reversi/reversi.vcxproj
@@ -116,10 +116,12 @@
   <ItemGroup>
     <ClInclude Include="include\resources.hpp" />
     <ClInclude Include="include\reversi\application.hpp" />
+    <ClInclude Include="include\reversi\game_board_renderer.hpp" />
     <ClInclude Include="include\stdafx.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
+    <ClCompile Include="src\game_board_renderer.cpp" />
     <ClCompile Include="src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
