--- a/reversi/reversi.vcxproj.filters
+++ b/reversi/reversi.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="include\reversi\player_info_renderer.hpp">
       <Filter>include\reversi</Filter>
     </ClInclude>
+    <ClInclude Include="include\reversi\hint_message_renderer.hpp">
+      <Filter>include\reversi</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\stdafx.cpp">
@@ -45,6 +48,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\player_info_renderer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\hint_message_renderer.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
