Let game interface expose score, next mover, and game over flag. Let the application retrieve these data from the game object rather than keeping them up-to-date based on events.

--- a/game_logic/game_logic.vcxproj
+++ b/game_logic/game_logic.vcxproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <ClCompile Include="src\cell_position.cpp" />
     <ClCompile Include="src\file_game_logger.cpp" />
+    <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\local_game.cpp" />
     <ClCompile Include="src\game_board.cpp" />
     <ClCompile Include="src\game_score.cpp" />
