--- a/game_logic/game_logic.vcxproj.filters
+++ b/game_logic/game_logic.vcxproj.filters
@@ -79,5 +79,8 @@
     <ClCompile Include="src\local_game.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\game.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
